--- a/QtecAccountManagement/Pages/Shared/_Layout.cshtml
+++ b/QtecAccountManagement/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - QtecAccountManagement</title>
+    <title>@ViewData["Title"] - Qtec Account Management</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/QtecAccountManagement.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">QtecAccountManagement</a>
+                <a class="navbar-brand" asp-page="/Index">Qtec Account Management</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,29 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link" asp-page="/Index">Dashboard</a>
+                        </li>
+                        @if (User.HasClaim("Admin", "true")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Accounts/Index">Chart of Accounts</a>
+                            </li>
+                        }
+                        @if (User.HasClaim("Accountant", "true") || User.HasClaim("Admin", "true"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/Vouchers/Index">Vouchers</a>
+                            </li>
+                        }
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <span class="nav-link">Welcome, @User.FindFirst("FullName")?.Value</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <form class="form-inline" asp-page="/Account/Logout" method="post">
+                                <button type="submit" class="nav-link btn btn-link">Logout</button>
+                            </form>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +57,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - QtecAccountManagement - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - Qtec Solution Limited
         </div>
     </footer>
 
